--- a/index.html
+++ b/index.html
@@ -167,9 +167,12 @@
         <footer>
           <div>
             Icons made by
-            <a href="https://www.freepik.com" title="Freepik">Freepik</a> from
             <a href="https://www.flaticon.com/" title="Flaticon"
               >www.flaticon.com</a
+            >
+            Coded by
+            <a href="https://github.com/nily-fri/Weather-App1" target="_blank"
+              >Nily Friedman</a
             >
           </div>
         </footer>
