add higher temp class

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
               />
             </div>
             <div class="row">
-              <strong>20°</strong>
+              <strong class="higher-temp">20°</strong>
               <br />
               <span class="lower-temp">14°</span>
             </div>
