--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
                 <a href="javascript:history.go(0)" id="celsius">C</a> |
                 <a href="javascript:history.go(0)" id="fahrenheit">F</a>
               </span>
-              <p><strong>20°</strong> / 14°</p>
+              <p>
+                <span class="higher-temp">20°</span> /
+                <span class="lower-temp">14°</span>
+              </p>
             </div>
           </div>
         </div>
@@ -93,7 +96,7 @@
             </div>
 
             <div class="row">
-              <strong>20°</strong> <br />
+              <span class="higher-temp">20°</span> <br />
               <span class="lower-temp">14°</span>
             </div>
           </div>
@@ -109,7 +112,7 @@
               />
             </div>
             <div class="row">
-              <strong>20°</strong> <br />
+              <span class="higher-temp">20°</span> <br />
               <span class="lower-temp">14°</span>
             </div>
           </div>
@@ -124,7 +127,7 @@
               />
             </div>
             <div class="row">
-              <strong>20°</strong><br />
+              <span class="higher-temp">20°</span> <br />
               <span class="lower-temp">14°</span>
             </div>
           </div>
@@ -140,7 +143,7 @@
               />
             </div>
             <div class="row">
-              <strong>20°</strong>
+              <span class="higher-temp">20°</span>
               <br />
               <span class="lower-temp">14°</span>
             </div>
@@ -157,7 +160,7 @@
               />
             </div>
             <div class="row">
-              <strong class="higher-temp">20°</strong>
+              <span class="higher-temp">20°</span>
               <br />
               <span class="lower-temp">14°</span>
             </div>
