lower and higher temp convert

--- a/index.html
+++ b/index.html
@@ -71,12 +71,12 @@
             <div class="today-temp">
               <span class="exact-temp" id="exact-temp"> 15°</span>
               <span class="degrees">
-                <a href="javascript:history.go(0)" id="celsius">C</a> |
+                <a href="x" id="celsius">C</a> |
                 <a href="javascript:history.go(0)" id="fahrenheit">F</a>
               </span>
               <p>
-                <span class="higher-temp">20°</span> /
-                <span class="lower-temp">14°</span>
+                <span class="higher-temp" id="higher-temp">20°</span> /
+                <span class="lower-temp" id="lower-temp">14°</span>
               </p>
             </div>
           </div>
