--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="col-4">
             <img src="svg/sun.svg" alt="sun-icon" class="big-icon" />
             <div class="today-temp">
-              <span class="exact-temp" id="exact-temp"> 15°</span>
+              <span class="exact-temp" id="exact-temp"> °</span>
               <span class="degrees">
                 <a href="x" id="celsius">C</a> |
                 <a href="javascript:history.go(0)" id="fahrenheit">F</a>
