--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="col-4">
             <ul>
               <li><span id="description">Clear</span></li>
-              <li>Precipitation: <span id="precipitation">30</span>%</li>
+              <li>Wind Speed: <span id="wind">30</span>km/h</li>
               <li>Humidity: <span id="humidity">64</span>%</li>
               <li>Feels like <span id="feels_like">15</span>°</li>
             </ul>
