--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             </ul>
           </div>
           <div class="col-4">
-            <img src="svg/sun.svg" alt="sun-icon" class="big-icon" />
+            <img alt="sun-icon" class="big-icon" />
             <div class="today-temp">
               <span class="exact-temp" id="exact-temp"> °</span>
               <span class="degrees">
