added wind speed convertor

--- a/index.html
+++ b/index.html
@@ -61,7 +61,10 @@
           <div class="col-4">
             <ul>
               <li><span id="description">Clear</span></li>
-              <li>Wind Speed: <span id="wind">30</span>km/h</li>
+              <li>
+                Wind Speed: <span id="wind">30</span
+                ><span id="speed-unit">km/h</span>
+              </li>
               <li>Humidity: <span id="humidity">64</span>%</li>
               <li>Feels like <span id="feels_like">15</span>°</li>
             </ul>
