changed icons to relate from api to mine

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </ul>
           </div>
           <div class="col-4">
-            <img alt="sun-icon" class="big-icon" />
+            <img src="png/01d.png" alt="sun-icon" class="big-icon" />
             <div class="today-temp">
               <span class="exact-temp" id="exact-temp"> °</span>
               <span class="degrees">
@@ -91,7 +91,7 @@
             <br />
             <div>
               <img
-                src="svg/sun.svg"
+                src="png/01d.png"
                 alt="sun-icon"
                 class="small-icon"
                 width="20px"
@@ -108,7 +108,7 @@
             <br />
             <div>
               <img
-                src="svg/sun.svg"
+                src="png/01d.png"
                 alt="sun-icon"
                 class="small-icon"
                 width="20px"
@@ -123,7 +123,7 @@
             FRI
             <div>
               <img
-                src="svg/sun.svg"
+                src="png/01d.png"
                 alt="sun-icon"
                 class="small-icon"
                 width="20px"
@@ -139,7 +139,7 @@
             <br />
             <div>
               <img
-                src="svg/sun.svg"
+                src="png/01d.png"
                 alt="sun-icon"
                 class="small-icon"
                 width="20px"
@@ -156,7 +156,7 @@
             <br />
             <div>
               <img
-                src="svg/sun.svg"
+                src="png/01d.png"
                 alt="sun-icon"
                 class="small-icon"
                 width="20px"
