created displayforecast function

--- a/index.html
+++ b/index.html
@@ -85,91 +85,7 @@
           </div>
         </div>
 
-        <div class="row week">
-          <div class="col-2 card">
-            WED
-            <br />
-            <div>
-              <img
-                src="png/01d.png"
-                alt="sun-icon"
-                class="small-icon"
-                width="20px"
-              />
-            </div>
-
-            <div class="row">
-              <span class="higher-temp">20°</span> <br />
-              <span class="lower-temp">14°</span>
-            </div>
-          </div>
-          <div class="col-2 card">
-            THU
-            <br />
-            <div>
-              <img
-                src="png/01d.png"
-                alt="sun-icon"
-                class="small-icon"
-                width="20px"
-              />
-            </div>
-            <div class="row">
-              <span class="higher-temp">20°</span> <br />
-              <span class="lower-temp">14°</span>
-            </div>
-          </div>
-          <div class="col-2 card">
-            FRI
-            <div>
-              <img
-                src="png/01d.png"
-                alt="sun-icon"
-                class="small-icon"
-                width="20px"
-              />
-            </div>
-            <div class="row">
-              <span class="higher-temp">20°</span> <br />
-              <span class="lower-temp">14°</span>
-            </div>
-          </div>
-          <div class="col-2 card">
-            SAT
-            <br />
-            <div>
-              <img
-                src="png/01d.png"
-                alt="sun-icon"
-                class="small-icon"
-                width="20px"
-              />
-            </div>
-            <div class="row">
-              <span class="higher-temp">20°</span>
-              <br />
-              <span class="lower-temp">14°</span>
-            </div>
-          </div>
-          <div class="col-2 card">
-            SUN
-            <br />
-            <div>
-              <img
-                src="png/01d.png"
-                alt="sun-icon"
-                class="small-icon"
-                width="20px"
-              />
-            </div>
-            <div class="row">
-              <span class="higher-temp">20°</span>
-              <br />
-              <span class="lower-temp">14°</span>
-            </div>
-          </div>
-          <div class="col-2"></div>
-        </div>
+        <div class="row week" id="week-forecast"></div>
         <footer>
           <div>
             Icons made by
